--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,28 @@
-<!doctype html>
-<html lang="en" ng-app="angularPerson">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HHP App</title>
-	<link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-</head>
-<body>
-	<div class="container">
-	<div class="text-center">
-			<h2>Menu</h2>
-		</div>
-	<ul class="nav nav-pills nav-stacked">
-		<li><a href="person.html">Person</a></li>
-  		<li><a href="#">Profile</a></li>
-  		<li><a href="#">Messages</a></li>
-  	</ul>
-	</div>
+<!DOCTYPE html>
+<html lang="en" ng-app>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HHP</title>
 
-	<script src="javascripts/jquery.min.js"></script>
-	<script src="javascripts/angular.min.js"></script>
-	<script src="javascripts/main.js"></script>
-</body>
+    <!-- Bootstrap -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    
+    
+  </head>
+  <body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
+  <script src="javascripts/jquery.min.js"></script>
+  <script src="javascripts/bootstrap.min.js"></script>
+  <script src="javascripts/angular.min.js"></script>
+  <div ng-include src="'navbar.html'"></div>
+  </body>
 </html>
