--- a/public/navbar.html
+++ b/public/navbar.html
@@ -20,7 +20,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuration <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="person.html">Person</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><a href="variable.html">Variable</a></li>
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
            
